; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_release_va_surface.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_release_va_surface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.va_surface = type { i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@VA_INVALID_ID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @release_va_surface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_va_surface(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.va_surface*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.va_surface*
  store %struct.va_surface* %5, %struct.va_surface** %3, align 8
  %6 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %7 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @VA_INVALID_ID, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %34

11:                                               ; preds = %1
  %12 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %13 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @VA_INVALID_ID, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %27

18:                                               ; preds = %11
  %19 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %20 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %23 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %22, i32 0, i32 2
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @vaDestroyImage(i32 %21, i64 %25)
  br label %27

27:                                               ; preds = %18, %11
  %28 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %29 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %32 = getelementptr inbounds %struct.va_surface, %struct.va_surface* %31, i32 0, i32 0
  %33 = call i32 @vaDestroySurfaces(i32 %30, i64* %32, i32 1)
  br label %34

34:                                               ; preds = %27, %1
  %35 = load %struct.va_surface*, %struct.va_surface** %3, align 8
  %36 = call i32 @talloc_free(%struct.va_surface* %35)
  ret void
}

declare dso_local i32 @vaDestroyImage(i32, i64) #1

declare dso_local i32 @vaDestroySurfaces(i32, i64*, i32) #1

declare dso_local i32 @talloc_free(%struct.va_surface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
